config/brandon3055/ProjectIntelligence/ModDocs/draconicadditions/1.15.0/en_us/chaos_liquifier_7a2a5.md
§align:center
##### §nChaos Liquefier§n

§stack[draconicadditions:chaos_liquefier]{size:64}

§rule{colour:0x606060,height:3,width:100%,top_pad:0}
This machine produces liquid Chaos from all varients of Chaos Shards.

This is the fuel needed to boost Draconic Addition's machines to it's maximum potential!

Once this machine detects a Chaos Shard in it's input slot, it will start powering up it's internal capacitors with RF.  Once sufficiantly charged with enough RF, it will inject all of the RF at once into the shard, instantly liquefying it and storing it internally.  The machine is built in such a way that the liquid Chaos will not escape or harm anything until removed from the machine.  You can use a §link[draconicadditions:chaos_container]{alt_text:"Chaos Container"} to move this liquid to another machine for use.

§rule{colour:0x606060,height:3,width:100%,top_pad:0}
§recipe[draconicadditions:chaos_liquefier]{spacing:2}
§rule{colour:0x606060,height:3,width:100%,top_pad:3}